--- a/index.html
+++ b/index.html
@@ -12,80 +12,96 @@
       <div class="container">
         <nav>
           <h1 class="brand">
-            <a href="#" class="logo">
+            <a href="#" class="brand__logo">
               <img src="./img/modest.png" alt="modest logo" />
             </a>
           </h1>
           <ul class="navbar">
-            <li>home</li>
-            <li>about</li>
-            <li>work</li>
-            <li>team</li>
-            <li>services</li>
-            <li>features</li>
-            <li>contact</li>
+            <li><a href="#" class="navbar__link navbar--active">home</a></li>
+            <li><a href="#" class="navbar__link">about</a></li>
+            <li><a href="#" class="navbar__link">work</a></li>
+            <li><a href="#" class="navbar__link">team</a></li>
+            <li><a href="#" class="navbar__link">services</a></li>
+            <li><a href="#" class="navbar__link">features</a></li>
+            <li><a href="#" class="navbar__link">contact</a></li>
           </ul>
         </nav>
       </div>
     </header>
     <main>
-      <article class="welcome">
-        <div class="container">
-          <h2>welcome to our marketplace</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus harum magnam laudantium,
-            voluptatem ea, aliquid rerum aliquam adipisci.
-          </p>
-          <a href="#">view more</a>
-          <a href="#">view tour</a>
+      <article id="welcome" class="container">
+        <div class="welcome">
+          <div class="welcome__desc">
+            <h2>welcome to our marketplace</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime iure odit, nisi amet quo cum assumenda quidem impedit, labore quis dicta quam eveniet tempore ad deleniti! Harum consequatur delectus expedita?.
+            </p>
+            <a href="#">view more</a>
+            <a href="#">view tour</a>
+          </div>
+          <!-- <div class="welcome__radio">
+            <input type="radio">
+            <input type="radio">
+            <input type="radio">
+          </div> -->
         </div>
       </article>
-      <article class="about">
-        <div class="container">
-          <div class="about__desc">
-            <h2>we are modest</h2>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique, odio repellendus
-              hic excepturi iste incidunt sunt laboriosam omnis vel commodi a, reiciendis autem cum?
-              Tempore unde vitae maiores quaerat explicabo.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus modi, cum laborum,
-              sint laudantium perspiciatis ipsa in totam accusamus esse nobis officiis id nam fugit
-              aliquam eum qui obcaecati perferendis.
-            </p>
-            <a href="#">fb</a>
-            <a href="#">tw</a>
-            <a href="#">gg</a>
-            <a href="#">dr</a>
-            <a href="#">be</a>
-          </div>
-          <div class="about__list">
-            <li>
-              <h3>dedication to the customers</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam odio molestias
-                pariatur, ullam nostrum rem
-              </p>
-            </li>
-            <li>
-              <h3>work closely with our clients</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam odio molestias
-                pariatur, ullam nostrum rem
-              </p>
-            </li>
-            <li>
-              <h3>increase happiness</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam odio molestias
-                pariatur, ullam nostrum rem
-              </p>
-            </li>
+      <article id="about" class="container">
+        <div class="about">
+          <h2>we are modest</h2>
+          <div class="about-content">
+            <div class="about-content-desc">
+              <div class="about-content-desc__prag">
+                <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique, odio repellendus
+                hic excepturi iste incidunt sunt laboriosam omnis vel commodi a, reiciendis autem cum?
+                Tempore unde vitae maiores quaerat explicabo.
+                </p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus modi, cum laborum,
+                  sint laudantium perspiciatis ipsa in totam accusamus esse nobis officiis id nam fugit
+                  aliquam eum qui obcaecati perferendis.
+                </p>
+              </div>
+              <div class="about-content-desc__socials">
+                <ul>
+                  <li><a href="#"><img src="./img/icon/socials/facebook.png" alt="facebook"></a></li>
+                  <li><a href="#"><img src="./img/icon/socials/twitter.png" alt="twitter"></a></li>
+                  <li><a href="#"><img src="./img/icon/socials/google.png" alt="google"></a></li>
+                  <li><a href="#"><img src="./img/icon/socials/dribble.png" alt="dribble"></a></li>
+                  <li><a href="#"><img src="./img/icon/socials/behance.png" alt="behance"></a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="about-content__list">
+              <ol>
+                <li>
+                  <h3>dedication to the customers</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam odio molestias
+                    pariatur, ullam nostrum rem
+                  </p>
+                </li>
+                <li>
+                  <h3>work closely with our clients</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam odio molestias
+                    pariatur, ullam nostrum rem
+                  </p>
+                </li>
+                <li>
+                  <h3>increase happiness</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam odio molestias
+                    pariatur, ullam nostrum rem
+                  </p>
+                </li>
+              </ol>
+            </div>
           </div>
         </div>
       </article>
-      <article class="team">
+      <article id="team" class="container">
         <div class="container">
           <h2>meet the team</h2>
           <ul class="team__members">
@@ -112,7 +128,7 @@
           </ul>
         </div>
       </article>
-      <article class="work">
+      <article id="work" class="container">
         <div class="container">
           <h2>lovely work</h2>
           <div class="work__img work__img--pic1">
@@ -142,7 +158,7 @@
           <a href="#">show me more</a>
         </div>
       </article>
-      <article class="services">
+      <article id="services" class="container">
         <div class="container">
           <div class="services__desc">
             <h2>what we do.</h2>
@@ -217,17 +233,73 @@
           </div>
         </div>
       </article>
-      <article class="features">
+      <article id="features" class="container">
         <div class="container">
           <h2>features.</h2>
+          <div class="features__list">
+            <div class="features__desc">
+              <img src="./img/bg/feature/pic1.jpg" alt="features img" class="feature__img">
+              <h3>product design: eames chairs</h3>
+              <p>Eames designs are certainly iconic. Everyone of us know at least two or three of their famous chairs. I would even risk saying that most of us dream about having a nice Eames.</p>
+            </div>
+            <div class="features__desc">
+              <img src="./img/bg/feature/pic2.jpg" alt="features img" class="feature__img">
+              <h3>elegant and colorful logos</h3>
+              <p>I've always found logo design to be one of the most challenging things to get right. There’s so much that a logo can say about a brand without actually saying it.</p>
+            </div>
+            <div class="features__desc">
+              <img src="./img/bg/feature/pic3.jpg" alt="features img" class="feature__img">
+              <h3>a showcase of creative</h3>
+              <p>It's always interesting to see another designer's take on a famous website, app or even physical product. Different designers add their own personality and style.</p>
+            </div>
+          </div>
         </div>
       </article>
-      <article class="contact">
+      <article id="contact" class="container">
         <div class="container">
           <h2>stay in touch.</h2>
+          <div id="map"></div>
+          <div class="contact__info">
+            <div class="contact__desc">
+              <h3></h3>
+              <p></p>
+              <p></p>
+            </div>
+            <div class="contact-form">
+              <form action="">
+                <div class="contact-form__info">
+                  <div class="cus-name">
+                    <label for="name">your name</label>
+                    <input type="text" name="name" id="name">
+                  </div>
+                  <div class="cus-email">
+                    <label for="name">your name</label>
+                    <input type="text" name="email" id="email">
+                  </div>
+                </div>
+                <div class="contact-form__message">
+                  <label for="message">your message</label>
+                  <input type="text" name="message" id="message">
+                  <button type="submit"></button>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
       </article>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="container">
+        <p>&copy; Copyright 2014 by PSD Booster. All Rights Reserved.</p>
+        <div class="footer__socials">
+          <a href="#"><img src="./img/icon/socials/twitter.png" alt="twitter"></a>
+          <a href="#"><img src="./img/icon/socials/facebook.png" alt="facebook"></a>
+          <a href="#"><img src="./img/icon/socials/skype.png" alt="skype"></a>
+          <a href="#"><img src="./img/icon/socials/behance.png" alt="behance"></a>
+          <a href="#"><img src="./img/icon/socials/linkin.png" alt="linkin"></a>
+        </div>
+      </div>
+    </footer>
+    <script src="./app.js"></script>
   </body>
 </html>
