--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
           </h1>
           <ul class="navbar">
             <li><a href="#" class="navbar__link navbar--active">home</a></li>
-            <li><a href="#" class="navbar__link">about</a></li>
-            <li><a href="#" class="navbar__link">work</a></li>
-            <li><a href="#" class="navbar__link">team</a></li>
-            <li><a href="#" class="navbar__link">services</a></li>
-            <li><a href="#" class="navbar__link">features</a></li>
-            <li><a href="#" class="navbar__link">contact</a></li>
+            <li><a href="#welcome" class="navbar__link">about</a></li>
+            <li><a href="#work" class="navbar__link">work</a></li>
+            <li><a href="#team" class="navbar__link">team</a></li>
+            <li><a href="#services" class="navbar__link">services</a></li>
+            <li><a href="#features" class="navbar__link">features</a></li>
+            <li><a href="#contact" class="navbar__link">contact</a></li>
           </ul>
         </nav>
       </div>
@@ -53,14 +53,10 @@
             <div class="about-content-desc">
               <div class="about-content-desc__prag">
                 <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique, odio repellendus
-                hic excepturi iste incidunt sunt laboriosam omnis vel commodi a, reiciendis autem cum?
-                Tempore unde vitae maiores quaerat explicabo.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo laudantium provident voluptates iure modi, dolores facere facilis, voluptatem dicta nulla illum nobis quos quaerat dolore assumenda similique, ipsa omnis atque?
                 </p>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus modi, cum laborum,
-                  sint laudantium perspiciatis ipsa in totam accusamus esse nobis officiis id nam fugit
-                  aliquam eum qui obcaecati perferendis.
+                  Lorem ipsum dolor sit amet, <span>consectetur adipisicing elit.</span> At minus mollitia, odit delectus alias nam corrupti, magni quasi id, cupiditate inventore quae soluta a asperiores nemo. Ea nam nulla doloribus!
                 </p>
               </div>
               <div class="about-content-desc__socials">
@@ -76,25 +72,31 @@
             <div class="about-content__list">
               <ol>
                 <li>
-                  <h3>dedication to the customers</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam odio molestias
-                    pariatur, ullam nostrum rem
-                  </p>
+                  <section>
+                    <h3>dedication to the customers</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam odio molestias
+                      pariatur, ullam nostrum rem
+                    </p>
+                  </section>
                 </li>
                 <li>
-                  <h3>work closely with our clients</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam odio molestias
-                    pariatur, ullam nostrum rem
-                  </p>
+                  <section>
+                    <h3>work closely with our clients</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam odio molestias
+                      pariatur, ullam nostrum rem
+                    </p>
+                  </section>
                 </li>
                 <li>
-                  <h3>increase happiness</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam odio molestias
-                    pariatur, ullam nostrum rem
-                  </p>
+                  <section>
+                    <h3>increase happiness</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam odio molestias
+                      pariatur, ullam nostrum rem
+                    </p>
+                  </section>
                 </li>
               </ol>
             </div>
@@ -102,30 +104,39 @@
         </div>
       </article>
       <article id="team" class="container">
-        <div class="container">
+        <div class="team">
           <h2>meet the team</h2>
-          <ul class="team__members">
-            <li class="member">
+          <div class="team-members">
+            <div class="team-members__member">
               <img src="./img/members/member1.png" alt="member-img" />
-              <h3>gloria bromley</h3>
+              <section>
+                <h3>gloria bromley</h3>
               <h4>CEO and Founder</h4>
-            </li>
-            <li class="member">
+              </section>
+            </div>
+            <div class="team-members__member">
               <img src="./img/members/member2.png" alt="member-img" />
-              <h3>paul torres</h3>
-              <h4>Head of Development</h4>
-            </li>
-            <li class="member">
+              <section>
+                <h3>paul torres</h3>
+                <h4>Head of Development</h4>
+              </section>
+              
+            </div>
+            <div class="team-members__member">
               <img src="./img/members/member3.png" alt="member-img" />
-              <h3>judith gillette</h3>
-              <h4>Graphic Designer</h4>
-            </li>
-            <li class="member">
+              <section>
+                <h3>judith gillette</h3>
+                <h4>Graphic Designer</h4>
+              </section>
+            </div>
+            <div class="team-members__member">
               <img src="./img/members/member4.png" alt="member-img" />
-              <h3>delores reed</h3>
-              <h4>Client Service Director</h4>
-            </li>
-          </ul>
+              <section>
+                <h3>delores reed</h3>
+                <h4>Client Service Director</h4>
+              </section>
+            </div>
+          </div>
         </div>
       </article>
       <article id="work" class="container">
