--- a/index.html
+++ b/index.html
@@ -107,14 +107,36 @@
         <div class="team">
           <h2>meet the team</h2>
           <div class="team-members">
-            <div class="team-members__member">
+            <div class="team-members-member">
+              <div class="team-members-member__mask">
+                <a href="#">
+                  <img src="./img/icon/socials/twitter.png" alt="social-img">
+                </a>
+                <a href="#">
+                  <img src="./img/icon/socials/facebook.png" alt="social-img">
+                </a>
+                <a href="#">
+                  <img src="./img/icon/socials/linkin.png" alt="social-img">
+                </a>
+              </div>
               <img src="./img/members/member1.png" alt="member-img" />
               <section>
                 <h3>gloria bromley</h3>
               <h4>CEO and Founder</h4>
               </section>
             </div>
-            <div class="team-members__member">
+            <div class="team-members-member">
+              <div class="team-members-member__mask">
+                <a href="#">
+                  <img src="./img/icon/socials/twitter.png" alt="social-img">
+                </a>
+                <a href="#">
+                  <img src="./img/icon/socials/facebook.png" alt="social-img">
+                </a>
+                <a href="#">
+                  <img src="./img/icon/socials/linkin.png" alt="social-img">
+                </a>
+              </div>
               <img src="./img/members/member2.png" alt="member-img" />
               <section>
                 <h3>paul torres</h3>
@@ -122,143 +144,177 @@
               </section>
               
             </div>
-            <div class="team-members__member">
+            <div class="team-members-member">
+              <div class="team-members-member__mask">
+                <a href="#">
+                  <img src="./img/icon/socials/twitter.png" alt="social-img">
+                </a>
+                <a href="#">
+                  <img src="./img/icon/socials/facebook.png" alt="social-img">
+                </a>
+                <a href="#">
+                  <img src="./img/icon/socials/linkin.png" alt="social-img">
+                </a>
+              </div>
               <img src="./img/members/member3.png" alt="member-img" />
               <section>
+
                 <h3>judith gillette</h3>
                 <h4>Graphic Designer</h4>
               </section>
             </div>
-            <div class="team-members__member">
+            <div class="team-members-member">
+              <div class="team-members-member__mask">
+                <a href="#">
+                  <img src="./img/icon/socials/twitter.png" alt="social-img">
+                </a>
+                <a href="#">
+                  <img src="./img/icon/socials/facebook.png" alt="social-img">
+                </a>
+                <a href="#">
+                  <img src="./img/icon/socials/linkin.png" alt="social-img">
+                </a>
+              </div>
               <img src="./img/members/member4.png" alt="member-img" />
               <section>
                 <h3>delores reed</h3>
                 <h4>Client Service Director</h4>
               </section>
-            </div>
           </div>
         </div>
       </article>
       <article id="work" class="container">
-        <div class="container">
+        <div class="work">
           <h2>lovely work</h2>
-          <div class="work__img work__img--pic1">
-            <div class="mask"><span></span></div>
-            <p>partnership guidlines</p>
+          <div class="work-content">
+            <div class="work-content__img work-content__img--pic1">
+              <div class="mask">
+                <img src="./img/icon/plus.png" alt="plus">
+                <p>partnership guidlines</p>
+              </div>
+            </div>
+            <div class="work-content__img work-content__img--pic2">
+              <div class="mask">
+                <img src="./img/icon/plus.png" alt="plus">
+                <p>partnership guidlines</p>
+              </div>
+              </div>
+            <div class="work-content__img work-content__img--pic3">
+              <div class="mask">
+                <img src="./img/icon/plus.png" alt="plus">
+                <p>partnership guidlines</p>
+              </div>
+            </div>
+            <div class="work-content__img work-content__img--pic4">
+              <div class="mask">
+                <img src="./img/icon/plus.png" alt="plus">
+                <p>partnership guidlines</p>
+              </div>
+            </div>
+            <div class="work-content__img work-content__img--pic5">
+              <div class="mask">
+                <img src="./img/icon/plus.png" alt="plus">
+                <p>partnership guidlines</p>
+              </div>
+            </div>
+            <div class="work-content__img work-content__img--pic6">
+              <div class="mask">
+                <img src="./img/icon/plus.png" alt="plus">
+                <p>partnership guidlines</p>
+              </div>
+            </div>
           </div>
-          <div class="work__img work__img--pic2">
-            <div class="mask"><span></span></div>
-            <p>partnership guidlines</p>
+          <div class="work__showmore">
+            <a href="#">show me more</a>
           </div>
-          <div class="work__img work__img--pic3">
-            <div class="mask"><span></span></div>
-            <p>partnership guidlines</p>
-          </div>
-          <div class="work__img work__img--pic4">
-            <div class="mask"><span></span></div>
-            <p>partnership guidlines</p>
-          </div>
-          <div class="work__img work__img--pic5">
-            <div class="mask"><span></span></div>
-            <p>partnership guidlines</p>
-          </div>
-          <div class="work__img work__img--pic6">
-            <div class="mask"><span></span></div>
-            <p>partnership guidlines</p>
-          </div>
-          <a href="#">show me more</a>
         </div>
       </article>
       <article id="services" class="container">
-        <div class="container">
-          <div class="services__desc">
-            <h2>what we do.</h2>
-            <img src="./img/icon/skills/cogs.png" alt="cogs-icon" />
-            <h3>easy them setup</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat natus laudantium
-              dolore rem nulla animi
-            </p>
-          </div>
-          <div class="services__desc">
-            <h2>what we do.</h2>
-            <img src="./img/icon/skills/pencil.png" alt="cogs-icon" />
-            <h3>easy them setup</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat natus laudantium
-              dolore rem nulla animi
-            </p>
-          </div>
-          <div class="services__desc">
-            <h2>what we do.</h2>
-            <img src="./img/icon/skills/mobile.png" alt="cogs-icon" />
-            <h3>easy them setup</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat natus laudantium
-              dolore rem nulla animi
-            </p>
-          </div>
-          <div class="services__desc">
-            <h2>what we do.</h2>
-            <img src="./img/icon/skills/clock.png" alt="cogs-icon" />
-            <h3>easy them setup</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat natus laudantium
-              dolore rem nulla animi
-            </p>
-          </div>
-            <h2>what we do.</h2>
-            <img src="./img/icon/skills/cogs.png" alt="cogs-icon" />
-            <h3>easy them setup</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat natus laudantium
-              dolore rem nulla animi
-            </p>
-          </div>
-          <div class="services__desc">
-            <h2>what we do.</h2>
-            <img src="./img/icon/skills/pencil.png" alt="cogs-icon" />
-            <h3>easy them setup</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat natus laudantium
-              dolore rem nulla animi
-            </p>
-          </div>
-          <div class="services__desc">
-            <h2>what we do.</h2>
-            <img src="./img/icon/skills/mobile.png" alt="cogs-icon" />
-            <h3>easy them setup</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat natus laudantium
-              dolore rem nulla animi
-            </p>
-          </div>
-          <div class="services__desc">
-            <h2>what we do.</h2>
-            <img src="./img/icon/skills/clock.png" alt="cogs-icon" />
-            <h3>easy them setup</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat natus laudantium
-              dolore rem nulla animi
-            </p>
+        <div class="services">
+          <h2>what we do.</h2>
+          <div class="services-content">
+            <div class="services-content__desc">
+              <img src="./img/icon/skills/cogs.png" alt="cogs-icon" />
+              <h3>easy them setup</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat natus laudantium
+                dolore rem nulla animi
+              </p>
+            </div>
+            <div class="services-content__desc">
+              <img src="./img/icon/skills/pencil.png" alt="cogs-icon" />
+              <h3>pixel perfect design</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat natus laudantium
+                dolore rem nulla animi
+              </p>
+            </div>
+            <div class="services-content__desc">
+              <img src="./img/icon/skills/mobile.png" alt="cogs-icon" />
+              <h3>reponsive display</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat natus laudantium
+                dolore rem nulla animi
+              </p>
+            </div>
+            <div class="services-content__desc">
+              <img src="./img/icon/skills/clock.png" alt="cogs-icon" />
+              <h3>27/7 support</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat natus laudantium
+                dolore rem nulla animi
+              </p>
+            </div>
+            <div class="services-content__desc">
+              <img src="./img/icon/skills/cogs.png" alt="cogs-icon" />
+              <h3>easy them setup</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat natus laudantium
+                dolore rem nulla animi
+              </p>
+            </div>
+            <div class="services-content__desc">
+              <img src="./img/icon/skills/pencil.png" alt="cogs-icon" />
+              <h3>pixel perfect design</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat natus laudantium
+                dolore rem nulla animi
+              </p>
+            </div>
+            <div class="services-content__desc">
+              <img src="./img/icon/skills/mobile.png" alt="cogs-icon" />
+              <h3>reponsive display</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat natus laudantium
+                dolore rem nulla animi
+              </p>
+            </div>
+            <div class="services-content__desc">
+              <img src="./img/icon/skills/clock.png" alt="cogs-icon" />
+              <h3>27/7 support</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat natus laudantium
+                dolore rem nulla animi
+              </p>
+            </div>
           </div>
         </div>
       </article>
       <article id="features" class="container">
-        <div class="container">
+        <div class="features">
           <h2>features.</h2>
-          <div class="features__list">
-            <div class="features__desc">
+          <div class="features-list">
+            <div class="features-list__desc">
               <img src="./img/bg/feature/pic1.jpg" alt="features img" class="feature__img">
               <h3>product design: eames chairs</h3>
               <p>Eames designs are certainly iconic. Everyone of us know at least two or three of their famous chairs. I would even risk saying that most of us dream about having a nice Eames.</p>
             </div>
-            <div class="features__desc">
+            <div class="features-list__desc">
               <img src="./img/bg/feature/pic2.jpg" alt="features img" class="feature__img">
               <h3>elegant and colorful logos</h3>
               <p>I've always found logo design to be one of the most challenging things to get right. There’s so much that a logo can say about a brand without actually saying it.</p>
             </div>
-            <div class="features__desc">
+            <div class="features-list__desc">
               <img src="./img/bg/feature/pic3.jpg" alt="features img" class="feature__img">
               <h3>a showcase of creative</h3>
               <p>It's always interesting to see another designer's take on a famous website, app or even physical product. Different designers add their own personality and style.</p>
@@ -267,31 +323,33 @@
         </div>
       </article>
       <article id="contact" class="container">
-        <div class="container">
+        <div class="contact">
           <h2>stay in touch.</h2>
-          <div id="map"></div>
-          <div class="contact__info">
-            <div class="contact__desc">
-              <h3></h3>
-              <p></p>
-              <p></p>
+          <div id="contact__map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.884006878701!2d105.78977791485454!3d21.037326685993726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135abcb66cd6aef%3A0x7e4b16cf67b0cbe0!2sTechSchool!5e0!3m2!1svi!2s!4v1661247784778!5m2!1svi!2s" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+          <div class="contact-info">
+            <div class="contact-info__desc">
+              <h3>contact information</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique nec dolor non, ornare sagittis dolor. Nulla vestibulum lacus sed molestie gravida.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique nec dolor non, ornare sagittis dolor. Nulla vestibulum lacus sed molestie gravida.</p>
             </div>
-            <div class="contact-form">
-              <form action="">
-                <div class="contact-form__info">
-                  <div class="cus-name">
+            <div class="contact-info-form">
+              <form>
+                <div class="contact-info-form-customer">
+                  <div class="contact-info-form-customer__name">
                     <label for="name">your name</label>
                     <input type="text" name="name" id="name">
                   </div>
-                  <div class="cus-email">
-                    <label for="name">your name</label>
+                  <div class="contact-info-form-customer__email">
+                    <label for="email">your email</label>
                     <input type="text" name="email" id="email">
                   </div>
                 </div>
-                <div class="contact-form__message">
+                <div class="contact-info-form__message">
                   <label for="message">your message</label>
-                  <input type="text" name="message" id="message">
-                  <button type="submit"></button>
+                  <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                  <button type="submit">send message</button>
                 </div>
               </form>
             </div>
@@ -299,10 +357,10 @@
         </div>
       </article>
     </main>
-    <footer>
-      <div class="container">
+    <footer class="footer">
+      <div class="footer-content">
         <p>&copy; Copyright 2014 by PSD Booster. All Rights Reserved.</p>
-        <div class="footer__socials">
+        <div class="footer-content__socials">
           <a href="#"><img src="./img/icon/socials/twitter.png" alt="twitter"></a>
           <a href="#"><img src="./img/icon/socials/facebook.png" alt="facebook"></a>
           <a href="#"><img src="./img/icon/socials/skype.png" alt="skype"></a>
